fixed alignment issue

--- a/styles/flower.css
+++ b/styles/flower.css
@@ -158,8 +158,7 @@ body {
 /* Instagram Section */
 .flower-collage {
     display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
+    justify-content: space-between;
 }
 
 /* latest deals section */
